fix: rename boost category title to 'РЈСЃРёР»РёС‚РµР»СЊ РўР°РїР°' in old shop modal

--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -1445,7 +1445,7 @@
                 <button class="close-btn" onclick="closeModal('shopModal')">✕</button>
             </div>
             <div class="shop-category">
-                <div class="category-title">⚡ Бусты</div>
+                <div class="category-title">💪 Усилитель Тапа</div>
                 <div id="boostsList"></div>
             </div>
             <div class="shop-category">
