--- a/web_app.html
+++ b/web_app.html
@@ -2246,14 +2246,14 @@
         
         const shopItems = {
             boosts: [
-                {name: "2x Множитель", emoji: "⚡", price: 1000, desc: "Удваивает доход с тапа", type: "multiplier_2x"},
-                {name: "5x Множитель", emoji: "🔥", price: 5000, desc: "Увеличивает доход в 5 раз", type: "multiplier_5x"},
-                {name: "10x Множитель", emoji: "💥", price: 20000, desc: "x10 к каждому тапу!", type: "multiplier_10x"},
+                {name: "2x Множитель", emoji: "⚡", price: 1000, desc: "Усиливает ваши тапы и увеличивает количество кликов", type: "multiplier_2x"},
+                {name: "5x Множитель", emoji: "🔥", price: 5000, desc: "Мощно усиливает ваши тапы и увеличивает количество кликов", type: "multiplier_5x"},
+                {name: "10x Множитель", emoji: "💥", price: 20000, desc: "Максимально усиливает ваши тапы и увеличивает количество кликов", type: "multiplier_10x"},
             ],
             automation: [
-                {name: "🤖 Авто-бот тапов", emoji: "🤖", price: 50000, desc: "Автоматически тапает за вас (5/сек)", type: "auto_bot"},
-                {name: "⚡ Двойная энергия", emoji: "⚡", price: 30000, desc: "Максимум энергии: 2000", type: "double_energy"},
-                {name: "🔄 Ускорение регенерации", emoji: "🔄", price: 40000, desc: "Энергия восстановливается быстрее", type: "regen_boost"},
+                {name: "🤖 Авто-бот тапов", emoji: "🤖", price: 50000, desc: "Автоматически тапает за вас", type: "auto_bot"},
+                {name: "⚡ Двойная энергия", emoji: "⚡", price: 30000, desc: "Увеличивает максимальный запас вашей энергии", type: "double_energy"},
+                {name: "🔄 Ускорение регенерации", emoji: "🔄", price: 40000, desc: "Ускоряет автоматическое восстановление вашей энергии", type: "regen_boost"},
             ],
             energy: [
                 {name: "Энергия +50", emoji: "⚡", price: 1000, amount: 50},
