feat: rename shop categories: tap_boost to РЈСЃРёР»РёС‚РµР»СЊ РўР°РїР°, energy_buy to Р’РѕСЃСЃС‚Р°РЅРѕРІР»РµРЅРёРµ Р­РЅРµСЂРіРёРё, energy_expand to Р Р°СЃС€РёСЂРµРЅРёРµ Р­РЅРµСЂРіРёРё

--- a/web_app.html
+++ b/web_app.html
@@ -2691,8 +2691,8 @@
             // Multilevel shop system - EACH item starts at level 0 and grows to 50
             const shopData = {
                 'tap_boost': {
-                    name: '⚡ Крипто-Бустеры',
-                    emoji: '⚡',
+                    name: '💪 Усилитель Тапа',
+                    emoji: '💪',
                     items: [
                         {level: 0, name: '🔋 Базовый Крипто-Бустер', desc: 'Увеличивает количество коинов за тап на +1. Простая, но эффективная технология для начинающих крипто-энтузиастов.', currency: 'coins', locked: false, basePrice: 1000, baseEffect: 1},
                         {level: 0, name: '⚡ Турбо-Акселератор', desc: 'Ускоряет процесс добычи криптовалюты на +3 коина за тап. Использует передовые алгоритмы оптимизации.', currency: 'coins', locked: false, basePrice: 2500, baseEffect: 3},
@@ -2707,8 +2707,8 @@
                     ]
                 },
                 'energy_buy': {
-                    name: '🔋 Энерго-Генераторы',
-                    emoji: '🔋',
+                    name: '⚡ Восстановление Энергии',
+                    emoji: '⚡',
                     items: [
                         {level: 0, name: '🔋 Солнечная Панель', desc: 'Базовый генератор энергии, восстанавливающий +0.5 энергии в секунду. Использует солнечный свет для подзарядки.', currency: 'coins', locked: false, basePrice: 1500, baseEffect: 0.5},
                         {level: 0, name: '⚡ Ветряная Турбина', desc: 'Улучшенный генератор, дающий +1.2 энергии в секунду. Преобразует кинетическую энергию в электрическую.', currency: 'coins', locked: false, basePrice: 3500, baseEffect: 1.2},
@@ -2723,8 +2723,8 @@
                     ]
                 },
                 'energy_expand': {
-                    name: '🔋 Энерго-Батареи',
-                    emoji: '🔋',
+                    name: '📈 Расширение Энергии',
+                    emoji: '📈',
                     items: [
                         {level: 0, name: '🔋 Литий-Ионная Батарея', desc: 'Базовый аккумулятор, увеличивающий максимальную энергию на +50. Современная технология для надежного хранения энергии.', currency: 'coins', locked: false, basePrice: 2000, baseEffect: 50},
                         {level: 0, name: '⚡ Суперконденсатор', desc: 'Улучшенный накопитель, расширяющий энергоемкость на +120. Мгновенная зарядка и разрядка с высокой эффективностью.', currency: 'coins', locked: false, basePrice: 5000, baseEffect: 120},
