fix: rename shop category buttons in old shop modal

--- a/web_app.html
+++ b/web_app.html
@@ -2765,9 +2765,9 @@
                     </div>
                     <div style="padding:20px;">
                         <div style="display:grid;grid-template-columns:repeat(2,1fr);gap:10px;margin-bottom:20px;">
-                            <button class="shop-cat-btn" data-category="tap_boost" onclick="loadShopCategory('tap_boost')" style="padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:12px;cursor:pointer;font-weight:700;font-size:13px;">💪 Усилитель</button>
-                            <button class="shop-cat-btn" data-category="energy_buy" onclick="loadShopCategory('energy_buy')" style="padding:12px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:12px;cursor:pointer;font-weight:700;font-size:13px;">⚡ Энергия</button>
-                            <button class="shop-cat-btn" data-category="energy_expand" onclick="loadShopCategory('energy_expand')" style="padding:12px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:12px;cursor:pointer;font-weight:700;font-size:13px;">📈 Расширение</button>
+                            <button class="shop-cat-btn" data-category="tap_boost" onclick="loadShopCategory('tap_boost')" style="padding:12px;background:linear-gradient(135deg,#667eea,#764ba2);color:#fff;border:none;border-radius:12px;cursor:pointer;font-weight:700;font-size:13px;">💪 Усилитель Тапа</button>
+                            <button class="shop-cat-btn" data-category="energy_buy" onclick="loadShopCategory('energy_buy')" style="padding:12px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:12px;cursor:pointer;font-weight:700;font-size:13px;">⚡ Восстановление</button>
+                            <button class="shop-cat-btn" data-category="energy_expand" onclick="loadShopCategory('energy_expand')" style="padding:12px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:12px;cursor:pointer;font-weight:700;font-size:13px;">📈 Расширение Энергии</button>
                             <button class="shop-cat-btn" data-category="autobot" onclick="loadShopCategory('autobot')" style="padding:12px;background:rgba(255,255,255,0.1);color:#fff;border:1px solid rgba(255,255,255,0.3);border-radius:12px;cursor:pointer;font-weight:700;font-size:13px;">🤖 Автобот</button>
                         </div>
                         <!-- VIP Button Row -->
