--- a/web_app.html
+++ b/web_app.html
@@ -3067,12 +3067,18 @@
                     console.log('Tap boost - userMultiplier:', userMultiplier, 'window.userData:', window.userData);
                     currentEffect = Math.max(0, userMultiplier - 1);
                     nextLevelPrice = Math.floor(basePrice * Math.pow(1.5, currentLevel + 1));
-                    // Calculate current effect for this item at current level (currentLevel is the level already purchased)
-                    const currentItemEffect = Math.floor(baseEffect * Math.pow(1.2, currentLevel));
-                    // Calculate next level effect for this item (next level = currentLevel + 1)
-                    const nextItemEffect = Math.floor(baseEffect * Math.pow(1.2, currentLevel + 1));
-                    // Show the increment (difference) - это то что реально добавится
-                    nextLevelEffect = nextItemEffect - currentItemEffect;
+                    
+                    // Special handling for first item (base_effect == 1): always gives +1
+                    if (baseEffect === 1) {
+                        nextLevelEffect = 1;
+                    } else {
+                        // Calculate current effect for this item at current level (currentLevel is the level already purchased)
+                        const currentItemEffect = Math.floor(baseEffect * Math.pow(1.2, currentLevel));
+                        // Calculate next level effect for this item (next level = currentLevel + 1)
+                        const nextItemEffect = Math.floor(baseEffect * Math.pow(1.2, currentLevel + 1));
+                        // Show the increment (difference) - это то что реально добавится
+                        nextLevelEffect = nextItemEffect - currentItemEffect;
+                    }
                 } else if (category === 'energy_buy') {
                     const baseEffect = item.baseEffect || 0.5;
                     const basePrice = item.basePrice || 1500;
