--- a/web_app.html
+++ b/web_app.html
@@ -3762,20 +3762,26 @@
                     const machinesList = document.getElementById('machinesList');
                     if(machinesList && data.user_machines) {
                         if(data.user_machines.length > 0) {
-                            machinesList.innerHTML = data.user_machines.map(m => `
+                            machinesList.innerHTML = data.user_machines.map(m => {
+                                const count = m.count || 1;
+                                const incomePerHour = m.income_per_hour || 0;
+                                const totalIncome = m.total_income || (incomePerHour * count);
+                                
+                                return `
                                 <div style="background:rgba(102,126,234,0.15);padding:12px;border-radius:12px;border:2px solid rgba(102,126,234,0.3);margin-bottom:10px;animation:slideIn 0.3s ease-out;box-shadow:0 4px 12px rgba(102,126,234,0.2);">
                                     <div style="display:flex;justify-content:space-between;align-items:center;">
-                                        <div>
-                                            <div style="font-weight:900;font-size:14px;margin-bottom:4px;color:#fff;">${m.name}</div>
+                                        <div style="flex:1;">
+                                            <div style="font-weight:900;font-size:14px;margin-bottom:4px;color:#fff;">${m.name} ${count > 1 ? `<span style="background:rgba(102,126,234,0.6);padding:2px 6px;border-radius:4px;font-size:10px;">x${count}</span>` : ''}</div>
                                             <div style="font-size:11px;color:#94a3b8;">Уровень ${m.level} | ${m.hash_rate} Hash/s</div>
-                                            <div style="font-size:12px;color:#4ade80;margin-top:4px;font-weight:700;">💰 +${Math.floor(m.income_per_hour || 0)} 💎/час</div>
+                                            <div style="font-size:12px;color:#4ade80;margin-top:4px;font-weight:700;">💰 +${Math.floor(totalIncome).toLocaleString()} 💎/час</div>
                                         </div>
                                         <div style="text-align:right;">
                                             <div style="font-size:28px;filter:drop-shadow(0 4px 8px rgba(102,126,234,0.5));">⚡</div>
                                         </div>
                                     </div>
                                 </div>
-                            `).join('');
+                            `;
+                            }).join('');
                         } else {
                             machinesList.innerHTML = '<p style="text-align:center;opacity:0.7;padding:15px;background:rgba(255,255,255,0.05);border-radius:12px;border:2px solid rgba(255,255,255,0.1);">🛒 У вас нет машин. Купите их выше!</p>';
                         }
